feat: 스트릭 복구 계획 및 대시보드 스터디 그룹 API 뼈대 추가